# triton-viz

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  AGENTS.md  AI_CONTRIBUTING.md  ARCHITECTURE.md  CONTRIBUTING.md  GLOSSARY.md  LICENSE  MANIFEST.in  MANUAL.md  README.md  REQUESTS.md  TODO.md  Triton-Puzzles.ipynb  Triton-Viz.ipynb  Triton-Viz.py  Triton_Puzzles20250829.ipynb  address_position_lifting_spec.md  dummy.ipynb  nki_beta_2_integration.md  package-lock.json  package.json  pyproject.toml  pytest.ini  race_detector_compiled_mode_plan.md  race_detector_static_hybrid_plan.md  requirements.txt  setup.py  tensor-view-manual.md  tsconfig.json
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: benchmark.yml  frontend.yml  publish.yml  python-app.yml
.subagents/: subagent-frontend-0-execute.txt  subagent-frontend-0-integrate.txt  subagent-frontend-0-plan.txt  subagent-frontend-0-review-2.txt  subagent-frontend-0-review-fix.txt  subagent-frontend-0-review.txt  subagent-frontend-1-execute.txt  subagent-frontend-1-integrate.txt  subagent-frontend-1-plan.txt  subagent-frontend-1-review.txt  subagent-frontend-2-execute-2.txt  subagent-frontend-2-integrate.txt  subagent-frontend-2-plan.txt  subagent-frontend-2-review-2.txt  subagent-frontend-2-review-3.txt  subagent-frontend-3-execute-2.txt  subagent-frontend-3-execute-3.txt  subagent-frontend-3-execute.txt  subagent-frontend-3-integrate-2.txt  subagent-frontend-3-plan-2.txt  subagent-frontend-3-review-2.txt  subagent-frontend-3-review-fix.txt  subagent-frontend-3-review.txt  subagent-frontend-4-execute.txt  subagent-frontend-4-integrate.txt  subagent-frontend-4-plan.txt  subagent-frontend-4-review.txt  subagent-frontend-5-plan.txt  subagent_result.txt
Examples/: conftest.py  dot.py  sum.py  vec_add.py
benchmarks/: bench_sanitizer.py
docs/: index.html
evaluation/: SWEEP_REPORT.md  __init__.py  ablation.py  capture_common.py  concretization_map.py  fla_capture.py  flagattn_capture.py  flaggems_capture.py  harness.py  headline.py  report.py  runner.py  scaling.py  shared_track.py  spec.py  tilebench_capture.py  tilebench_cutile_capture.py  torchao_capture.py  tritonbench_capture.py  tritonbench_meta_capture.py
evaluation/kernels/: __init__.py  _captured.py  aiter_originals.py  await_sync.py  fla.py  fla_specs.json  flagattn.py  flagattn_specs.json  flaggems.py  flaggems_specs.json  golden_smoke.py  liger.py  rmw_sync.py  tilebench.py  tilebench_cutile.py  tilebench_cutile_specs.json  tilebench_specs.json  torchao.py  torchao_specs.json  tritonbench_g.py  (+5 more)
examples/: 3dims.py  __init__.py  conftest.py  dot.py  elementwise_add_autotune.py  flip.py  gemm.py  ima.py  ima_example.py  indirect_load.py  load_and_store.py  load_store.py  load_store_simple.py  matmu.py  matmul_demo.py  multithread_examples.py  nki_softmax.py  print_oob_traceback.py  sanitizer_multithread_overhead.py  sum.py  test_non_contiguous.py  test_symbolic_execution.py  tracer_visualizer.py  value_histogram.py  vec_add.py
frontend/: ARCHITECTURE.md  GLOSSARY.md  main.ts
nki-examples/: matmul.py  matmul_demo.py  nki_mm_launches.pkl  rmsnorm.py  softmax.py  test_kernels.py
reviews/: frontend-0-round-1.md  frontend-0-round-2.md  frontend-1-round-1.md  frontend-2-round-1.md  frontend-3-round-1.md  frontend-3-round-2.md  frontend-4-round-1.md  frontend-5-round-1.md  viz-1-codex.md  viz-2-codex.md  viz-2-codex2.md  viz-2-codex3.md  viz-2-codex4.md  viz-3-round-1.md  viz-3-round-2.md
scripts/: print_tracebacks.py
src/: api.ts  dimension_utils.ts  histogram.ts  load.ts  load_utils.ts  matmul.ts  nki.ts  op_workspace.ts  sbuf_panel.ts  state.ts  store.ts  tensor_view.ts  types.ts  ui_helpers.ts  visualization.ts
tests/: conftest.py  test_adapters.py  test_affine_loop_optimization.py  test_autotune_add.py  test_config.py  test_core.py  test_indirect_load.py  test_masked_load.py  test_multithreading.py  test_nki.py  test_non_contiguous.py  test_null_sanitizer.py  test_print_traceback.py  test_profiler.py  test_profiler_client.py  test_reduce_broadcast.py  test_sanitizer.py  test_sanitizer_ablation_caches.py  test_sanitizer_client.py  test_symbolic_execution.py  test_trace_add_clients.py  test_tracer.py  test_tracer_client.py  test_wrapper.py
triton_viz/: ARCHITECTURE.md  __init__.py  analysis.py  data.py  draw.py  interface.py  interpreter.py  tooltip.py  trace.py  visualizer_cli.py  wrapper.py
(+590 files in other folders)
