[tool.ruff]
ignore = ["E731"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triton-viz"
version = "2.0"
description = "A visualization tool for Triton"
authors = [
  {name = "Deep Learning Profiling Tools Team", email = "kzhou6@gmu.edu"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "setuptools",
  "triton",
  "pyarrow",
  "pre-commit",
  "pytest",
  "z3-solver",
  "anytree",
  "cairocffi",
  "flask",
  "flask_cloudflared",
  "tqdm",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"triton_viz" = ["templates/*.html", "static/*.js", "static/**/*.js", "static/**"]

[project.urls]
homepage = "https://github.com/Deep-Learning-Profiling-Tools/triton-viz"

[project.scripts]
triton-sanitizer = "triton_viz.wrapper:apply_sanitizer"
triton-profiler = "triton_viz.wrapper:apply_profiler"

[project.optional-dependencies]
nki = [
  "neuronx-cc==2.*",
]
