[tool.ruff]
ignore = ["E731"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triton-viz"
version = "3.0"
description = "A visualization tool for Triton"
authors = [
  {name = "Deep Learning Profiling Tools Team", email = "kzhou6@gmu.edu"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "setuptools",
  "triton",
  "pyarrow",
  "pre-commit",
  "z3-solver",
  "anytree",
  "cairocffi",
  "flask",
  "flask_cloudflared",
  "tqdm",
]

[tool.setuptools.packages.find]
include=["triton_viz*"]
exclude=["tasks"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"triton_viz" = ["templates/*.html", "static/*.js", "static/**/*.js", "static/**"]

[project.urls]
homepage = "https://github.com/Deep-Learning-Profiling-Tools/triton-viz"

[project.scripts]
triton-sanitizer = "triton_viz.wrapper:apply_sanitizer"
triton-profiler = "triton_viz.wrapper:apply_profiler"

[project.optional-dependencies]
test = [
  "pytest",
  "numpy",
  "torch",
]
nki = [
  "neuronx-cc @ https://pip.repos.neuron.amazonaws.com/neuronx-cc/neuronx_cc-2.22.12471.0%2Bb4a00d10-cp310-cp310-linux_x86_64.whl ; python_version == '3.10'",
  "neuronx-cc @ https://pip.repos.neuron.amazonaws.com/neuronx-cc/neuronx_cc-2.21.33363.0%2B82129205-cp311-cp311-linux_x86_64.whl ; python_version == '3.11'",
  "neuronx-cc @ https://pip.repos.neuron.amazonaws.com/neuronx-cc/neuronx_cc-2.22.12471.0%2Bb4a00d10-cp312-cp312-linux_x86_64.whl ; python_version == '3.12'"
]
